	they do not match the arguments of coerce().

    o	S4 methods with missing arguments in the definition are handled
	correctly  when non-signature arguments exist, and check for
	conflicting local names in the method definition.

    o	qgamma() and qchisq() could be inaccurate for small p,
    	e.g. qgamma(1.2e-10, shape = 19) was 2.52 rather than 2.73.

    o	dbeta(.., ncp) is now more accurate for large ncp.

    o	coerce() is now a proper S4 object and so prints correctly.

    o	@ now checks it is being applied to an S4 object, and if not
    	gives a warning (which will become an error in 2.8.0).

    o	dump() and friends now warn that all S4 objects (even those
    	based on vectors) are not source()able, with a stronger wording.

    o	read.dcf(all = TRUE) was leaking connections.

    o	scan() with a non-default separator could skip nul bytes,
	including those entered as \0 with allowEscapes=TRUE.  This
	was different from the default separator.

    o	determinant(matrix(,0,0)) now returns a correct "det" result.

    o	Name space 'grDevices' was not unloading its DLL when the
	name space was unloaded.

    o	getNativeSymbolInfo() was unaware of non-registered Fortran
    	names, because one of the C support routines ignored them.

    o	load() again reads correctly character strings with embedded nuls.




	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************



		CHANGES IN R VERSION 2.6.2 patched


BUG FIXES

    o	src/extra/pcre has been updated to PCRE 7.6 (bugfix release).

    o	unlink(..., recursive=TRUE) no longer crashes on some platforms
	if a directory cannot be opened.

    o	Loading in 2.6.2 a saved workspace could give an unimportant
	warning in a non-UTF-8 multibyte locale (in particular a CJK
	locale on Windows) which is now suppressed.

    o	print() methods are more consistent in returning the original
	argument invisibly.
